Solve some errors on mobile version

--- a/src/components/HomePage/EmpathySection/EmpathySection.css
+++ b/src/components/HomePage/EmpathySection/EmpathySection.css
@@ -7,10 +7,10 @@
 }
 
 .empathy-map-section {
-  padding-top: 10%;
-  padding-bottom: 10%;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
   display: flex;
   align-items: center;
   justify-content: flex-end !important;
